--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			        	<span class="say">* 致女某某： *</span><br>
+			        	<span class="say">* 致汤莹莹： *</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">· 女某某，情人节快乐！</span><br>
+			        	<span class="say">· 汤莹莹，公主殿下！</span><br>
 						<span class="say"> </span><br>
-                        <span class="say">· 不经意相识, 或许是缘分，或许是注定的。</span><br>
+                        <span class="say">· 是你的出现，让我有了可想念的人。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">· 虽然.....，但......！</span><br>
+			        	<span class="say">· 你不用多好</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">· 虽然......，但.......！</span><br>
+			        	<span class="say">· 我喜欢就好</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">· 虽然......，但......！</span><br>
+			        	<span class="say">· 我不是很好</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">· 虽然......</span><br>
+			        	<span class="say">· 你不嫌弃就好</span><br>
 						<span class="say"> </span><br>
 			        	<span class="say">· 无论如何，只要你我依旧喜欢对方，我会一直陪着你。</span><br>
                         <span class="say"> </span><br>
@@ -49,7 +49,7 @@
 			        </div>
                 </div>
                 <div id="clock-box">
-                    <span class="STYLE1">现在是</span>张亚龙 <span class="STYLE1" style="color: red">❤</span> 女某某<span class="STYLE1" style="color: red">相恋</span>
+                    <span class="STYLE1">现在是</span>赵亮亮 <span class="STYLE1" style="color: red">❤</span> 汤莹莹<span class="STYLE1" style="color: red">相恋</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -191,11 +191,11 @@
        //下面修改起始日期
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2021, 4, 19); 			//时间年月日 月份0~11
-		    together.setHours(22);						//小时	
-		    together.setMinutes(22);					//分钟
-		    together.setSeconds(2);					//秒前一位
-		    together.setMilliseconds(2);				//秒第二位
+		    together.setFullYear(2023, 1, 18); 			//时间年月日 月份0~11
+		    together.setHours(12);						//小时	
+		    together.setMinutes(46);					//分钟
+		    together.setSeconds(0);					//秒前一位
+		    together.setMilliseconds(0);				//秒第二位
 
 		    $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
