--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                         <span class="say"> </span><br>
                         <span class="say">· You are my only girlfriend.</span><br>
 						<span class="say"> </span><br>
-						<span class="say">· I love you,×××!</span><br>
+						<span class="say">· I love you,My Royal Highness Princess!</span><br>
 						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span>--@author 张亚龙--</span>
+                        <span class="say"><span class="space"></span>--@author 赵亮亮--</span>
 			        </div>
                 </div>
                 <div id="clock-box">
@@ -191,7 +191,7 @@
        //下面修改起始日期
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2023, 01, 18); 			//时间年月日 月份0~11
+		    together.setFullYear(2023, 0, 18); 			//时间年月日 月份0~11
 		    together.setHours(12);						//小时	
 		    together.setMinutes(46);					//分钟
 		    together.setSeconds(0);					//秒前一位
